--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-camera": "~13.2.1",
     "expo-font": "~11.1.1",
     "expo-location": "~15.1.1",
+    "expo-media-library": "~15.2.3",
     "expo-status-bar": "~1.4.4",
     "firebase": "^10.1.0",
     "react": "18.2.0",
